# libcpdlc

./: .gitignore  .gitmodules  COPYING  Makefile.com  Makefile.rules  build_dep.common  build_gnutls_deps  build_submodules  common.cmake  gencerts.sh  gmp-6.2.0.tar.xz  gnutls-inet.patch  gnutls-mac-compile.patch  libwebsockets-msg_nosignal.patch  nettle-3.10.2.tar.xz  nettle-3.5.tar.xz  nettle-3.9.1.tar.xz  openssl.cnf  testmsgs.txt  ubuntu-packages
common/: cpdlc_config_common.c  cpdlc_config_common.h
cpdlc_atc/: main.c  main.h
cpdlcd/: Makefile  auth.c  auth.h  blocklist.c  blocklist.h  common.h  cpdlcd.c  msg_router.c  msg_router.h  msgquota.c  msgquota.h  rpc.c  rpc.h  sample.conf  sample.userlist
doc/format/: Makefile  base_network.dia  format.tex  logon_flow.dia  virt_net.dia  warn_pattern.eps
fans/: fans.c  fans.h  fans_emer.c  fans_emer.h  fans_fms_data.c  fans_fms_data.h  fans_freetext.c  fans_freetext.h  fans_impl.h  fans_logon_status.c  fans_logon_status.h  fans_main_menu.c  fans_main_menu.h  fans_msg.c  fans_msg.h  fans_parsing.c  fans_parsing.h  fans_pos_pick.c  fans_pos_pick.h  fans_pos_rep.c  fans_pos_rep.h  fans_rej.c  fans_rej.h  fans_reports.c  fans_reports.h  fans_req.c  fans_req.h  fans_req_alt.c  fans_req_alt.h  fans_req_clx.c  fans_req_clx.h  fans_req_off.c  fans_req_off.h  fans_req_rte.c  fans_req_rte.h  fans_req_spd.c  fans_req_spd.h  fans_req_vmc.c  fans_req_vmc.h  fans_req_voice.c  (+9 more)
fansgui/: Info.plist  Makefile  Makefile.mac  build.sh  fansgui-dmg-background.xcf  fansgui-icon.icns  fansgui.c  fansgui.rc  fansgui.xcf  mtcr_mini.c  mtcr_mini.h  sample-client.conf  xpintf.c  xpintf.h
fansgui/xp-plugin/: CMakeLists.txt  XCompile.txt  plugin.c  plugin_intf.h
fansgui/zmq/: build_dep.common  build_zmq.sh  zeromq-4.3.1.tar.xz
fmsbox/: fmsbox.c  fmsbox.h  fmsbox_emer.c  fmsbox_emer.h  fmsbox_freetext.c  fmsbox_freetext.h  fmsbox_impl.h  fmsbox_logon_status.c  fmsbox_logon_status.h  fmsbox_main_menu.c  fmsbox_main_menu.h  fmsbox_msg.c  fmsbox_msg.h  fmsbox_parsing.c  fmsbox_parsing.h  fmsbox_pos_pick.c  fmsbox_pos_pick.h  fmsbox_pos_rep.c  fmsbox_pos_rep.h  fmsbox_rej.c  fmsbox_rej.h  fmsbox_req.c  fmsbox_req.h  fmsbox_req_alt.c  fmsbox_req_alt.h  fmsbox_req_clx.c  fmsbox_req_clx.h  fmsbox_req_off.c  fmsbox_req_off.h  fmsbox_req_rte.c  fmsbox_req_rte.h  fmsbox_req_spd.c  fmsbox_req_spd.h  fmsbox_req_vmc.c  fmsbox_req_vmc.h  fmsbox_req_voice.c  fmsbox_req_voice.h  fmsbox_req_wcw.c  fmsbox_req_wcw.h  fmsbox_scratchpad.c  (+3 more)
fmsgui/: Makefile  fmsgui.c  mtcr_mini.c
gnutls-win64/lib/: gnutls.pc  libgnutls-30.def
gnutls-win64/lib/gnutls/: gnutls.h
prototypes/: prototype.c  prototype.h
sounds/: ATC_Message.flac
src/: cpdlc.c  cpdlc.h  cpdlc_alloc.h  cpdlc_assert.c  cpdlc_assert.h  cpdlc_client.c  cpdlc_client.h  cpdlc_core.h  cpdlc_crc.h  cpdlc_data_types.h  cpdlc_hexcode.c  cpdlc_hexcode.h  cpdlc_infos.c  cpdlc_msg.c  cpdlc_msg.h  cpdlc_msg_arinc622.c  cpdlc_msg_arinc622.h  cpdlc_msg_asn.c  cpdlc_msg_asn.h  cpdlc_msg_impl.h  cpdlc_msglist.c  cpdlc_msglist.h  cpdlc_net_util.h  cpdlc_string.c  cpdlc_string.h  cpdlc_thread.h  minilist.c  minilist.h  struct.asn
src/asn1/: ATCdownlinkmessage.c  ATCdownlinkmessage.h  ATCdownlinkmsgelementid.c  ATCdownlinkmsgelementid.h  ATCmessageheader.c  ATCmessageheader.h  ATCuplinkmessage.c  ATCuplinkmessage.h  ATCuplinkmsgelementid.c  ATCuplinkmsgelementid.h  ATWDistancetolerance.c  ATWDistancetolerance.h  ATWalongtrackwaypoint.c  ATWalongtrackwaypoint.h  ATWalongtrackwaypointsequence.c  ATWalongtrackwaypointsequence.h  ATWaltitude.c  ATWaltitude.h  ATWaltitudesequence.c  ATWaltitudesequence.h  ATWaltitudetolerance.c  ATWaltitudetolerance.h  ATWdistance.c  ATWdistance.h  Aircraftequipmentcode.c  Aircraftequipmentcode.h  Aircraftflightidentification.c  Aircraftflightidentification.h  Aircrafttype.c  Aircrafttype.h  Airport.c  Airport.h  Airportdeparture.c  Airportdeparture.h  Airportdestination.c  Airportdestination.h  Airwayidentifier.c  Airwayidentifier.h  Airwayintercept.c  Airwayintercept.h  (+999 more)
src/prototypes/: prototype.c  prototype.h
test/: CMakeLists.txt  Makefile  client_test.c  msgtest.c
